css/main.css
p{
    text-align: left;
}

p.summary {
    padding-bottom: 0rem;
}

p.project {
    position : relative;
    top : 0px;
    text-align: left;
    padding-bottom: -1rem;
}

p.socialnet {
    font-weight : bold;
}

h3 {
    font-style : italic;
    font-weight : bold;
}

a.link    {
    color:deepskyblue;
    background-color:transparent;
    text-decoration:none;
}

a.link_db    {
    color: #1903ff;
    background-color:transparent;
    text-decoration:none;
}

p.subtitle {
    font-weight : bold;
    background-color:transparent;
    text-align:left;
    color:darkgray;
}

hr {
    display: block;
    margin-top: 2.0em;
    margin-bottom: 0.5em;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1.5px;
}

